# pinecone/experimental/openapi/api/vector_service_api.py
@@ -23,13 +23,11 @@ from pinecone.experimental.openapi.model_utils import (  # noqa: F401
     validate_and_convert_types
 )
 from pinecone.experimental.openapi.model.googlerpc_status import GooglerpcStatus
-from pinecone.experimental.openapi.model.pinecone_delete_response import PineconeDeleteResponse
 from pinecone.experimental.openapi.model.pinecone_fetch_response import PineconeFetchResponse
 from pinecone.experimental.openapi.model.pinecone_list_namespaces_response import PineconeListNamespacesResponse
 from pinecone.experimental.openapi.model.pinecone_list_response import PineconeListResponse
 from pinecone.experimental.openapi.model.pinecone_query_response import PineconeQueryResponse
 from pinecone.experimental.openapi.model.pinecone_summarize_response import PineconeSummarizeResponse
-from pinecone.experimental.openapi.model.pinecone_upsert_response import PineconeUpsertResponse
 
 
 class VectorServiceApi(object):
@@ -58,7 +56,6 @@ class VectorServiceApi(object):
 
 
             Keyword Args:
-                request_id (str): Unique id of the request.. [optional]
                 ids ([str]): Vectors to delete.. [optional]
                 delete_all (bool): Indicates that all vectors in the index namespace should be deleted.. [optional]
                 namespace (str): Namespace to delete vectors from applicable.. [optional]
@@ -83,7 +80,7 @@ class VectorServiceApi(object):
                 async_req (bool): execute request asynchronously
 
             Returns:
-                PineconeDeleteResponse
+                bool, date, datetime, dict, float, int, list, str, none_type
                     If the method is called asynchronously, returns the request
                     thread.
             """
@@ -110,7 +107,7 @@ class VectorServiceApi(object):
 
         self.vector_service_delete = _Endpoint(
             settings={
-                'response_type': (PineconeDeleteResponse,),
+                'response_type': (bool, date, datetime, dict, float, int, list, str, none_type,),
                 'auth': [
                     'ApiKeyAuth'
                 ],
@@ -121,7 +118,6 @@ class VectorServiceApi(object):
             },
             params_map={
                 'all': [
-                    'request_id',
                     'ids',
                     'delete_all',
                     'namespace',
@@ -140,8 +136,6 @@ class VectorServiceApi(object):
                 'allowed_values': {
                 },
                 'openapi_types': {
-                    'request_id':
-                        (str,),
                     'ids':
                         ([str],),
                     'delete_all':
@@ -150,13 +144,11 @@ class VectorServiceApi(object):
                         (str,),
                 },
                 'attribute_map': {
-                    'request_id': 'requestId',
                     'ids': 'ids',
                     'delete_all': 'deleteAll',
                     'namespace': 'namespace',
                 },
                 'location_map': {
-                    'request_id': 'query',
                     'ids': 'query',
                     'delete_all': 'query',
                     'namespace': 'query',
@@ -189,7 +181,6 @@ class VectorServiceApi(object):
 
 
             Keyword Args:
-                request_id (str): Unique id of the request.. [optional]
                 ids ([str]): Vector ids to fetch.. [optional]
                 namespace (str): [optional]
                 _return_http_data_only (bool): response data without head status
@@ -251,7 +242,6 @@ class VectorServiceApi(object):
             },
             params_map={
                 'all': [
-                    'request_id',
                     'ids',
                     'namespace',
                 ],
@@ -269,20 +259,16 @@ class VectorServiceApi(object):
                 'allowed_values': {
                 },
                 'openapi_types': {
-                    'request_id':
-                        (str,),
                     'ids':
                         ([str],),
                     'namespace':
                         (str,),
                 },
                 'attribute_map': {
-                    'request_id': 'requestId',
                     'ids': 'ids',
                     'namespace': 'namespace',
                 },
                 'location_map': {
-                    'request_id': 'query',
                     'ids': 'query',
                     'namespace': 'query',
                 },
@@ -314,7 +300,6 @@ class VectorServiceApi(object):
 
 
             Keyword Args:
-                request_id (str): Unique id of the request.. [optional]
                 namespace (str): Namespace to list vectors of.. [optional]
                 _return_http_data_only (bool): response data without head status
                     code and headers. Default is True.
@@ -375,7 +360,6 @@ class VectorServiceApi(object):
             },
             params_map={
                 'all': [
-                    'request_id',
                     'namespace',
                 ],
                 'required': [],
@@ -392,17 +376,13 @@ class VectorServiceApi(object):
                 'allowed_values': {
                 },
                 'openapi_types': {
-                    'request_id':
-                        (str,),
                     'namespace':
                         (str,),
                 },
                 'attribute_map': {
-                    'request_id': 'requestId',
                     'namespace': 'namespace',
                 },
                 'location_map': {
-                    'request_id': 'query',
                     'namespace': 'query',
                 },
                 'collection_format_map': {
@@ -432,7 +412,6 @@ class VectorServiceApi(object):
 
 
             Keyword Args:
-                request_id (str): Unique id of the request.. [optional]
                 _return_http_data_only (bool): response data without head status
                     code and headers. Default is True.
                 _preload_content (bool): if False, the urllib3.HTTPResponse object
@@ -492,7 +471,6 @@ class VectorServiceApi(object):
             },
             params_map={
                 'all': [
-                    'request_id',
                 ],
                 'required': [],
                 'nullable': [
@@ -508,14 +486,10 @@ class VectorServiceApi(object):
                 'allowed_values': {
                 },
                 'openapi_types': {
-                    'request_id':
-                        (str,),
                 },
                 'attribute_map': {
-                    'request_id': 'requestId',
                 },
                 'location_map': {
-                    'request_id': 'query',
                 },
                 'collection_format_map': {
                 }
@@ -544,12 +518,6 @@ class VectorServiceApi(object):
 
 
             Keyword Args:
-                request_id (str): Unique id of the request.. [optional]
-                request_default_namespace (str): Default namespace to query if no namespace specified in QueryVector (default value \"\").. [optional]
-                request_default_top_k (int): Number of results to return for each query.. [optional]
-                request_default_filter (str): Default filter to apply if no filter specified in QueryVector (default value \"\").. [optional]
-                include_data (bool): Whether to include the vectors in response as well as ids.. [optional]
-                include_metadata (bool): Whether to include the metadata in response as well as ids.. [optional]
                 _return_http_data_only (bool): response data without head status
                     code and headers. Default is True.
                 _preload_content (bool): if False, the urllib3.HTTPResponse object
@@ -604,17 +572,11 @@ class VectorServiceApi(object):
                 ],
                 'endpoint_path': '/query',
                 'operation_id': 'vector_service_query',
-                'http_method': 'GET',
+                'http_method': 'POST',
                 'servers': None,
             },
             params_map={
                 'all': [
-                    'request_id',
-                    'request_default_namespace',
-                    'request_default_top_k',
-                    'request_default_filter',
-                    'include_data',
-                    'include_metadata',
                 ],
                 'required': [],
                 'nullable': [
@@ -630,34 +592,10 @@ class VectorServiceApi(object):
                 'allowed_values': {
                 },
                 'openapi_types': {
-                    'request_id':
-                        (str,),
-                    'request_default_namespace':
-                        (str,),
-                    'request_default_top_k':
-                        (int,),
-                    'request_default_filter':
-                        (str,),
-                    'include_data':
-                        (bool,),
-                    'include_metadata':
-                        (bool,),
                 },
                 'attribute_map': {
-                    'request_id': 'requestId',
-                    'request_default_namespace': 'requestDefaultNamespace',
-                    'request_default_top_k': 'requestDefaultTopK',
-                    'request_default_filter': 'requestDefaultFilter',
-                    'include_data': 'includeData',
-                    'include_metadata': 'includeMetadata',
                 },
                 'location_map': {
-                    'request_id': 'query',
-                    'request_default_namespace': 'query',
-                    'request_default_top_k': 'query',
-                    'request_default_filter': 'query',
-                    'include_data': 'query',
-                    'include_metadata': 'query',
                 },
                 'collection_format_map': {
                 }
@@ -686,7 +624,6 @@ class VectorServiceApi(object):
 
 
             Keyword Args:
-                request_id (str): Unique id of the request.. [optional]
                 _return_http_data_only (bool): response data without head status
                     code and headers. Default is True.
                 _preload_content (bool): if False, the urllib3.HTTPResponse object
@@ -746,7 +683,6 @@ class VectorServiceApi(object):
             },
             params_map={
                 'all': [
-                    'request_id',
                 ],
                 'required': [],
                 'nullable': [
@@ -762,14 +698,10 @@ class VectorServiceApi(object):
                 'allowed_values': {
                 },
                 'openapi_types': {
-                    'request_id':
-                        (str,),
                 },
                 'attribute_map': {
-                    'request_id': 'requestId',
                 },
                 'location_map': {
-                    'request_id': 'query',
                 },
                 'collection_format_map': {
                 }
@@ -819,7 +751,7 @@ class VectorServiceApi(object):
                 async_req (bool): execute request asynchronously
 
             Returns:
-                PineconeUpsertResponse
+                bool, date, datetime, dict, float, int, list, str, none_type
                     If the method is called asynchronously, returns the request
                     thread.
             """
@@ -846,7 +778,7 @@ class VectorServiceApi(object):
 
         self.vector_service_upsert = _Endpoint(
             settings={
-                'response_type': (PineconeUpsertResponse,),
+                'response_type': (bool, date, datetime, dict, float, int, list, str, none_type,),
                 'auth': [
                     'ApiKeyAuth'
                 ],
